--- a/Reborn/View/Base.lproj/Main.storyboard
+++ b/Reborn/View/Base.lproj/Main.storyboard
@@ -2627,7 +2627,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CcI-IA-Fo4" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1I5-U8-KXq">
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1I5-U8-KXq">
                                                 <rect key="frame" x="15" y="20" width="384" height="610"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H79-hx-hQE" userLabel="VIP Founction">
@@ -2981,20 +2981,8 @@
                                                     </view>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstItem="2gR-qV-msb" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="3XX-EQ-WgK"/>
-                                                    <constraint firstItem="iJs-TO-3ch" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="Cow-K8-OhM"/>
                                                     <constraint firstItem="Ak4-lP-eyo" firstAttribute="height" secondItem="YhA-we-a1G" secondAttribute="height" id="Eyu-MY-Rew"/>
-                                                    <constraint firstItem="rPF-jZ-Aoe" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="GMU-2p-WHW"/>
                                                     <constraint firstItem="Ak4-lP-eyo" firstAttribute="width" secondItem="YhA-we-a1G" secondAttribute="width" id="N2P-nO-C5L"/>
-                                                    <constraint firstItem="lh1-pk-Ebu" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="OQJ-X1-6xt"/>
-                                                    <constraint firstItem="YhA-we-a1G" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="WA6-oC-W1M"/>
-                                                    <constraint firstItem="rPF-jZ-Aoe" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="WKH-K9-ELV"/>
-                                                    <constraint firstItem="1bU-a7-FrP" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="Yq9-i4-YoZ"/>
-                                                    <constraint firstItem="YhA-we-a1G" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="amH-Qf-vD0"/>
-                                                    <constraint firstItem="2gR-qV-msb" firstAttribute="width" secondItem="H79-hx-hQE" secondAttribute="width" id="hNm-IP-vhS"/>
-                                                    <constraint firstItem="1bU-a7-FrP" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="iOu-yX-NFx"/>
-                                                    <constraint firstItem="lh1-pk-Ebu" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="pe3-zw-MFb"/>
-                                                    <constraint firstItem="iJs-TO-3ch" firstAttribute="height" secondItem="H79-hx-hQE" secondAttribute="height" id="r9e-ja-9kZ"/>
                                                 </constraints>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JxF-GM-2RC">
@@ -3365,7 +3353,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dnb-hB-YOr">
                                 <rect key="frame" x="20" y="20" width="374" height="808"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">用户隐私政策
+                                <string key="text">用户隐私政策
 
 [极简自律] 关注并且尊重用户隐私，我们不会以任何方式收集您的个人数据，包括您的个人信息，使用记录，使用偏好，您在本地产生的数据将储存在您的设备。如果您删除习惯项目，项目相关数据将会在本地被删除，且无法恢复。如果您卸载App，所有数据将会被删除，且无法被恢复。
 
@@ -3395,7 +3383,7 @@
 
 如果您对我们的服务不满意，您可以尝试在Apple申请退款，退款成功后，您的高级会员服务将不会被保留，如果您在成功扣费后没有自动更新为高级会员，您可以发送邮件联系我们 liuzimingjay@gmail.com 我们会尽快协助您解决
 
-</mutableString>
+</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
